--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,7 +8,9 @@ PyPDF2==3.0.1
 pdfplumber==0.10.3
 pytesseract==0.3.10
 pdf2image==1.16.3
-#Pillow==10.1.0
+Pillow==10.1.0
+opencv-python-headless==4.8.1.78
+numpy==1.24.3
 python-dotenv==1.0.0
 bleach==6.1.0
 Werkzeug==3.0.1
